# llms

./: README.md
backend/: .env  main.py  pyproject.toml  requirements.txt  vercel.json
backend/app/: context.py
backend/app/api/routers/: chat.py
backend/app/engine/: constants.py  context.py  generate.py  index.py
backend/data/: history.pkl
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: global.css  layout.tsx  page.tsx
frontend/app/components/: chat-section.tsx  header.tsx
frontend/app/components/ui/: button.tsx  chat-history.tsx  chat-sidebar.tsx  file-uploader.tsx  input.tsx  upload-image-preview.tsx
frontend/app/components/ui/chat/: chat-actions.tsx  chat-avatar.tsx  chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat.interface.ts  codeblock.tsx  index.ts  markdown.tsx  use-copy-to-clipboard.tsx
